<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/transparent">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_shapeable"
        android:layout_width="220dp"
        android:layout_height="340dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rv_colored_back"
        android:contentDescription="@string/wallpaper_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/round_image" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rv_colored_back"
        app:cardBackgroundColor="@color/screen_back"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_shapeable">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_shapeable">

            <TextView
                android:text="@string/image_setting"
                android:paddingHorizontal="30dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rv_colored_back"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="13dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rv_colored_back"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/lock"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="13dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>